Before refactoring to zope.schema-based metadata types

--- a/ckanext/publicamundi/templates/package/read.html
+++ b/ckanext/publicamundi/templates/package/read.html
@@ -5,9 +5,17 @@
 {% block package_description %}
     
   {{ super() }}
-
+  
   <div>
     <dt>Dataset Type:</dt><dd>{{ pkg.dataset_type | default('<none>') }}</dd>
+  </div>
+
+  <div>
+    <dt>Baz:</dt><dd>{{ pkg.baz | default('<none>') }}</dd>
+  </div>
+  
+  <div>
+    <dt>Baz (view):</dt><dd>{{ pkg.baz_view | default('<none>') }}</dd>
   </div>
 
 
