--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
@@ -26,6 +26,17 @@
   {{ form.hidden('dataset_type', data.get('dataset_type')) }}
   <div><dt>Dataset Type:</dt><dd>{{ data.get('dataset_type') }}</dd></div>
   {% endif %}
+  
+  
+  {{ form.input('baz', 
+        label=_('Baz'), 
+        id='field-baz', 
+        placeholder=_('a wonderfull thing'), 
+        value=data.get('baz'), 
+        error=errors.get('baz'), 
+        classes=['control-medium']) 
+  }}
+  
 
   {#
   {% set music_genres = data.get('foo', [None]) %}
