--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
@@ -36,7 +36,18 @@
         error=errors.get('baz'), 
         classes=['control-medium']) 
   }}
-  
+   
+  {{ form.input('foo-0-baz', 
+        label=_('Foo/Baz'), 
+        id='field-foo-0-baz', 
+        placeholder=_('a wonderfull thing'), 
+        value=data.get('foo-0-baz'), 
+        error=errors.get('foo-0-baz'), 
+        classes=['control-medium']) 
+  }}
+ 
+
+
 
   {#
   {% set music_genres = data.get('foo', [None]) %}
