Added {to/from}_json() methods to interface metadata.ibase.IBaseObject

--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
@@ -37,12 +37,12 @@
         classes=['control-medium']) 
   }}
    
-  {{ form.input('foo-0-baz', 
+  {{ form.input('foo.0.baz', 
         label=_('Foo/Baz'), 
-        id='field-foo-0-baz', 
+        id='field-foo.0.baz', 
         placeholder=_('a wonderfull thing'), 
-        value=data.get('foo-0-baz'), 
-        error=errors.get('foo-0-baz'), 
+        value=data.get('foo.0.baz'), 
+        error=errors.get('foo.0.baz'), 
         classes=['control-medium']) 
   }}
  
