--- a/ckanext/publicamundi/templates/package/read.html
+++ b/ckanext/publicamundi/templates/package/read.html
@@ -6,18 +6,19 @@
     
   {{ super() }}
   
+  {#
   <div>
     <dt>Dataset Type:</dt><dd>{{ pkg.dataset_type | default('<none>') }}</dd>
   </div>
+  #}
 
-  <div>
-    <dt>Baz:</dt><dd>{{ pkg.baz | default('<none>') }}</dd>
-  </div>
-  
-  <div>
-    <dt>Baz (view):</dt><dd>{{ pkg.baz_view | default('<none>') }}</dd>
-  </div>
+  {#
+  <div><dt>Baz:</dt><dd>{{ pkg.baz | default('<none>') }}</dd></div>
+  #}
 
+  {#
+  <div><dt>Baz (view):</dt><dd>{{ pkg.baz_view | default('<none>') }}</dd></div>
+  #}  
 
   {# Add our custom "foo" field to the dataset read page. #}
   {#
@@ -29,3 +30,4 @@
   #}
 
 {% endblock %}
+
