--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-text.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-text.html
@@ -1,32 +1,37 @@
-{% import "macros/form.html" as form %}
-{% set field_name = name_prefix ~ '.' ~ F.getName() %}
-{% set field_title = title or  F.title %}
+{#{% import "macros/form.html" as form %}#}
 
+{% set name = name_prefix ~ '.' ~ F.getName() -%}
+{% set title = title or F.title -%}
+{% set required = required or F.required -%}
+{% set classes = [ 'control-medium', 'field-edit-' ~ name ~ '-wrapper' ] -%}
+{% set control_classes = [ ] -%}
+{% set error = None -%}
 
-{#  
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
     <label class="control-label" for="{{ for }}">
-        {% if is_required %}<span title="{{ _("This field is required") }}" class="control-required">*</span> {% endif %}{{ label or _('Custom') }}
+        {% if F.required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif %}
+        {{ title }}
     </label>
     <div class="controls{{ " " ~ control_classes | join(' ') }}">
-      <input 
-        id="{{ 'field-' ~ field_name }}" 
-        type="text" name="{{ field_name }}" 
-        value="{{ f | empty_and_escape }}" 
-        placeholder="{{ F.default | empty_and_escape }}"  
-      />
-      {% if error and error is iterable %}<span class="error-block">{{ error|join(', ') }}</span>{% endif %}
+        <input 
+            id="{{ 'field-' ~ name }}" 
+            type="text" name="{{ name }}" 
+            value="{{ f | empty_and_escape }}" 
+            placeholder="{{ F.default | empty_and_escape }}"  
+        />
+        {% if error and error is iterable %}<span class="error-block">{{ error | join(', ') }}</span>{% endif %}
     </div>
 </div>
-#}
 
+{#  
 {{ 
-    form.input(field_name, 
+    form.input(name, 
         label = title or F.title, 
-        id = field_name, 
+        id = name, 
         placeholder = F.default or '', 
         value = f, 
         error = errors,  
-        classes = ['control-medium', 'field-edit-' ~ field_name ~ 'wrapper' ]
+        classes = ['control-medium', 'field-edit-' ~ name ~ 'wrapper' ]
     ) 
 }}
+#}
