Created default widgets (and accompanying tests) for ITextLine, IText, IChoice, IBool.

--- a/ckanext/publicamundi/templates/tests/page.html
+++ b/ckanext/publicamundi/templates/tests/page.html
@@ -1,3 +1,10 @@
 {% extends 'page.html' %}
 
-{% block primary_content_inner %}{{ c.data }}{% endblock %}
+{% block primary_content_inner %}
+{{ c.markup }}
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{% resource 'ckanext-publicamundi/styles' %}
+{% endblock %}
