--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-textline.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-textline.html
@@ -4,22 +4,29 @@
 {% set title = title or F.title -%}
 {% set placeholder = placeholder or F.default -%}
 {% set required = F.required if required is not defined else required -%}
-{% set description = F.description if description is not defined else description -%}
 {% set classes = [] if classes is not defined else classes -%}
-{% set classes = classes + [ 'control-full', 'field-edit-' ~ name ~ '-group' ] -%}
-{% set input_classes = [] if input_classes is not defined %}
+{% set classes = classes + [ 'field-edit-' ~ name ~ '-group' ] -%}
+{% set input_classes = [ 'input-medium' ] if input_classes is not defined %}
 {% set attrs = {} if attrs is not defined else attrs -%}
+{% set error = None -%}
 
-<div class="control-group{{ " " ~ classes | join(' ') }}">
+<div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
     <label class="control-label" for="{{ 'field-' ~ name }}">
         {{ title }}
         {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif %}
     </label>
     <div class="controls">
-        <textarea id="{{ 'field-' ~ name }}" name="{{ name }}" class={{ input_classes | join(" ") }}
-            placeholder="{{ placeholder | empty_and_escape }}"  
+        <input 
+            id="{{ 'field-' ~ name }}" 
+            type="text" 
+            name="{{ name }}"
+            class={{ input_classes | join(" ") }}
+            value="{{ value | empty_and_escape }}" 
+            placeholder="{{ placeholder | empty_and_escape }}"
             {{ markup_helpers.attributes(attrs) }}
-          />{{ value | empty_and_escape }}</textarea>
-        {% if description %}<div class="help-block">{{ description }}</div>{% endif %}
+        />
+        {% if error and error is iterable %}
+        <span class="error-block">{{ error | join(', ') }}</span>
+        {% endif %}
     </div>
 </div>
