--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-checkbox-2.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-checkbox-2.html
@@ -7,19 +7,13 @@
 {% set classes = [ 'field-edit-' ~ name ~ '-group' ] -%}
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
-    <label class="control-label">{{ title }}</label>
     <div class="controls">
-        <div class="checkbox">
-            <input 
-                type="checkbox" 
-                name="{{ name }}" 
-                id="field-{{ name }}" 
-                value="{{ name }}"
+        <label class="checkbox">
+            <input type="checkbox" name="{{ name }}" id="field-{{ name }}" value="{{ name }}"
                 class="{{ input_classes | list | join(" ") }}"
                 {% if value %}checked="checked"{% endif -%}
-                {{ markup_helpers.attributes(attrs) }}
-             />
+                {{ markup_helpers.attributes(attrs) -}}/>
              <span>{{ description }}</span>
-         </div>
+         </label>
     </div>
 </div>
