--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-checkbox-1.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-checkbox-1.html
@@ -1,8 +1,8 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-{% set name = name_prefix ~ '.' ~ F.getName() -%}
-{% set title = title or F.title -%}
-{% set description = description or F.description or title -%}
+{% set name = name_prefix ~ '.' ~ field.getName() -%}
+{% set title = title or field.title -%}
+{% set description = description or field.description or title -%}
 {% set attrs = {} if attrs is not defined else attrs -%}
 {% set classes = [ 'field-edit-' ~ name ~ '-group' ] -%}
 
