--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-text.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-text.html
@@ -1,13 +1,13 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-{% set name = name_prefix ~ '.' ~ F.getName() -%}
-{% set title = title or F.title -%}
-{% set placeholder = placeholder or F.default -%}
-{% set required = F.required if required is not defined else required -%}
-{% set description = F.description if description is not defined else description -%}
+{% set name = name_prefix ~ '.' ~ field.getName() -%}
+{% set title = title or field.title -%}
+{% set placeholder = placeholder or field.default -%}
+{% set required = field.required if required is not defined else required -%}
+{% set description = field.description if description is not defined else description -%}
 {% set classes = [] if classes is not defined else classes -%}
 {% set classes = classes + [ 'control-full', 'field-edit-' ~ name ~ '-group' ] -%}
-{% set input_classes = [] if input_classes is not defined %}
+{% set input_classes = [] if input_classes is not defined -%}
 {% set attrs = {} if attrs is not defined else attrs -%}
 
 <div class="control-group{{ " " ~ classes | join(' ') }}">
@@ -18,7 +18,7 @@
     <div class="controls">
         <textarea id="{{ 'field-' ~ name }}" name="{{ name }}" class={{ input_classes | join(" ") }}
             placeholder="{{ placeholder | empty_and_escape }}"  
-            {{ markup_helpers.attributes(attrs) }}
+            {{ markup_helpers.attributes(attrs) -}}
           />{{ value | empty_and_escape }}</textarea>
         {% if description %}<div class="help-block">{{ description }}</div>{% endif %}
     </div>
