--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-textline.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-textline.html
@@ -1,9 +1,9 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-{% set name = name_prefix ~ '.' ~ F.getName() -%}
-{% set title = title or F.title -%}
-{% set placeholder = placeholder or F.default -%}
-{% set required = F.required if required is not defined else required -%}
+{% set name = name_prefix ~ '.' ~ field.getName() -%}
+{% set title = title or field.title -%}
+{% set placeholder = placeholder or field.default -%}
+{% set required = field.required if required is not defined else required -%}
 {% set classes = [] if classes is not defined else classes -%}
 {% set classes = classes + [ 'field-edit-' ~ name ~ '-group' ] -%}
 {% set input_classes = [ 'input-medium' ] if input_classes is not defined %}
