Refactored field widgets (field instances are bound to objects)

--- a/ckanext/publicamundi/templates/tests/field.html
+++ b/ckanext/publicamundi/templates/tests/field.html
@@ -1,5 +1,5 @@
 {% extends 'page.html' %}
 
 {% block primary_content_inner %}
-{{ h.markup_for_field('read', field_def, field_val, 'foo', title=title) }}
+{{ h.markup_for_field('read', field, 'foo', { 'title': title }) }}
 {% endblock %}
