--- a/ckanext/publicamundi/templates/package/snippets/objects/edit-point.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/edit-point.html
@@ -7,7 +7,7 @@
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
     <label class="control-label">
-        {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif %}{{ title }}
+        {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif %}{{ title or name }}
     </label>
     <div class="controls">
         <input 
