--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-checkbox-1.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-checkbox-1.html
@@ -1,16 +1,10 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-{% set name = name_prefix ~ '.' ~ field.getName() -%}
-{% set title = title or field.title -%}
-{% set description = description or field.description or title -%}
-{% set attrs = {} if attrs is not defined else attrs -%}
-{% set classes = [ 'field-edit-' ~ name ~ '-group' ] -%}
-
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
     <label class="control-label">{{ title }}</label>
     <div class="controls">
         <div class="checkbox">
-            <input type="checkbox" name="{{ name }}" id="field-{{ name }}" value="{{ name }}"
+            <input type="checkbox" name="{{ qname }}" id="field-{{ qname }}" value="{{ qname }}"
                 class="{{ input_classes | list | join(" ") }}"
                 {% if value %}checked="checked"{% endif -%}
                 {{ markup_helpers.attributes(attrs) -}}
