--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-textline.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-textline.html
@@ -1,32 +1,23 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-{% set name = name_prefix ~ '.' ~ field.getName() -%}
-{% set title = title or field.title -%}
 {% set placeholder = placeholder or field.default -%}
-{% set required = field.required if required is not defined else required -%}
-{% set classes = [] if classes is not defined else classes -%}
-{% set classes = classes + [ 'field-edit-' ~ name ~ '-group' ] -%}
-{% set input_classes = [ 'input-medium' ] if input_classes is not defined %}
-{% set attrs = {} if attrs is not defined else attrs -%}
+{% set input_classes = [ 'input-medium' ] if input_classes is not defined -%}
 {% set error = None -%}
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
-    <label class="control-label" for="{{ 'field-' ~ name }}">
+    <label class="control-label" for="{{ 'field-' ~ qname }}">
         {{ title }}
-        {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif %}
+        {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif -%}
     </label>
     <div class="controls">
-        <input 
-            id="{{ 'field-' ~ name }}" 
-            type="text" 
-            name="{{ name }}"
-            class={{ input_classes | join(" ") }}
+        <input type="text" id="{{ 'field-' ~ qname }}"  name="{{ qname }}"
+            class={{ input_classes | list | join(" ") }}
             value="{{ value | empty_and_escape }}" 
             placeholder="{{ placeholder | empty_and_escape }}"
-            {{ markup_helpers.attributes(attrs) }}
+            {{ markup_helpers.attributes(attrs) -}}
         />
-        {% if error and error is iterable %}
+        {% if error and error is iterable -%}
         <span class="error-block">{{ error | join(', ') }}</span>
-        {% endif %}
+        {% endif -%}
     </div>
 </div>
