--- a/ckanext/publicamundi/templates/package/snippets/fields/read-bool.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-bool.html
@@ -1,5 +1,4 @@
-{% set title = title or field.title or field.getName() %}
-<div class="field-read-{{ name_prefix ~ '.' ~ field.getName() }}-group">
+<div class="{{ classes | join(' ') }}">
     <dt>{{ title }}</dt>
     <dd>{% if value %}{{ _('Yes') }}{% else %}{{ _('No') }}{% endif %}</dd>
 </div>
