--- a/ckanext/publicamundi/templates/package/snippets/fields/read-choice.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-choice.html
@@ -1,6 +1,5 @@
-{% set title = title or field.title or field.getName() -%}
 {% set term = field.vocabulary.getTerm(value) if value -%}
-<div class="field-read-{{ name_prefix ~ '.' ~ field.getName() }}-group">
+<div class="{{ classes | join(' ') }}">
     <dt>{{ title }}</dt>
     <dd>{{ term.title if term else 'n/a' }}</dd>  
 </div>
