Re-added tests for registered widgets (adaptee is now a 2-element vector)

--- a/ckanext/publicamundi/templates/tests/form.html
+++ b/ckanext/publicamundi/templates/tests/form.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block primary_content_inner %}
-<form class="form">
+<form class="{{ c.form_class }}">
     {{ c.form }}
 </form>
 {% endblock %}
