--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-checkbox-3.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-checkbox-3.html
@@ -2,7 +2,7 @@
 
 <div class="{{ "error" if error }}{{ " " ~ classes | join(' ') }}">
     <label class="checkbox">
-        <input type="checkbox" name="{{ qname }}" id="field-{{ qname }}" value="{{ qname }}"
+        <input type="checkbox" name="{{ qname }}" id="input-{{ qname }}" value="{{ qname }}"
             class="{{ input_classes | list | join(" ") }}"
             {% if value %}checked="checked"{% endif -%}
             {{ markup_helpers.attributes(attrs) -}} />
