--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-checkbox-2.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-checkbox-2.html
@@ -3,7 +3,7 @@
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
     <div class="controls">
         <label class="checkbox">
-            <input type="checkbox" name="{{ qname }}" id="field-{{ qname }}" value="{{ qname }}"
+            <input type="checkbox" name="{{ qname }}" id="input-{{ qname }}" value="{{ qname }}"
                 class="{{ input_classes | list | join(" ") }}"
                 {% if value %}checked="checked"{% endif -%}
                 {{ markup_helpers.attributes(attrs) -}}/>
