--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-textline.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-textline.html
@@ -10,7 +10,7 @@
         {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif -%}
     </label>
     <div class="controls">
-        <input type="text" id="{{ 'field-' ~ qname }}"  name="{{ qname }}"
+        <input type="text" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
             class={{ input_classes | list | join(" ") }}
             value="{{ value | empty_and_escape }}" 
             placeholder="{{ placeholder | empty_and_escape }}"
