Revised base widget traits for Dict fields.

--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-list.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-list.html
@@ -1,7 +1,6 @@
-{% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-<div class="{{ classes | join(' ') }}" {{ markup_helpers.attributes(attrs) }} >
-    <h3 class="title">{{ title }}</h3>
+<div class="{{ classes | join(' ') }}">
+    {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
     {% if description %}<div class="description">{{ description }}</div>{% endif -%}
     <ol>
         {% for item in items -%}
