Added date-related widgets. Revised widget-info paster command (filter by field).

--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -5,3 +5,17 @@
 div.controls .help-block {
     font-size: 0.85em;
 }
+
+div.accordion-group {
+    border-radius: 1px;
+}
+
+select,
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="number"],
+input[type="tel"] {
+    border-radius: 1px;
+}
+
