--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-date.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-date.html
@@ -1,7 +1,7 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
 {% set placeholder = placeholder or field.default -%}
-{% set input_classes = [ 'input-medium' ] if input_classes is not defined -%}
+{% set input_classes = [ 'input-small' ] if input_classes is not defined -%}
 {% set error = None -%}
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
@@ -14,6 +14,8 @@
             class={{ input_classes | list | join(" ") }}
             value="{{ value | empty_and_escape }}" 
             placeholder="{{ placeholder | empty_and_escape }}"
+            data-module="datepicker"
+            data-module-dateformat="yyyy-mm-dd"
             {{ markup_helpers.attributes(attrs) -}}
         />
         {% if error and error is iterable -%}
@@ -21,3 +23,5 @@
         {% endif -%}
     </div>
 </div>
+
+{% resource 'ckanext-publicamundi/datepicker' %}
