--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-text.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-text.html
@@ -4,7 +4,7 @@
 {% set classes = classes + [ 'control-full' ] -%}
 
 <div class="control-group{{ " " ~ classes | join(' ') }}">
-    <label class="control-label" for="{{ 'field-' ~ qname }}">
+    <label class="control-label" for="{{ 'input-' ~ qname }}">
         {{ title }}
         {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif %}
     </label>
