--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-time.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-time.html
@@ -1,8 +1,11 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
 {% set placeholder = placeholder or field.default -%}
-{% set input_classes = [ 'input-medium' ] if input_classes is not defined -%}
+{% set input_classes = [ 'input-small' ] if input_classes is not defined -%}
 {% set error = None -%}
+{% set format = format or '24h' %}
+
+{% set time_format = 'HH:mm:ss PP' if format == '12h' else 'hh:mm:ss' %}
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
     <label class="control-label" for="{{ 'input-' ~ qname }}">
@@ -12,7 +15,9 @@
     <div class="controls">
         <div class="input-append datetime"
             data-module="datetimepicker" 
-            data-module-picktime="true" data-module-pickdate="true" data-module-format="yyyy-MM-dd hh:mm:ss"
+            data-module-picktime="true" data-module-pickdate="false" 
+            data-module-pick12hourformat="{{ 'true' if format == '12h' else 'false' }}"
+            data-module-format="{{ time_format }}" 
              >
             <input type="text" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
                 class={{ input_classes | list | join(" ") }}
@@ -20,7 +25,7 @@
                 placeholder="{{ placeholder | empty_and_escape }}"
             />
             <span class="add-on">
-              <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
+              <i data-time-icon="icon-time"></i>
             </span>
         </div>
         {% if error and error is iterable -%}
