--- a/ckanext/publicamundi/templates/package/snippets/objects/edit-temporal_extent.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/edit-temporal_extent.html
@@ -3,8 +3,7 @@
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
     <label class="control-label">
-        {{ title }}
-        {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif -%}
+        {{ title }}{% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif -%}
     </label>
     <div class="controls">
        <input type="text" 
