--- a/ckanext/publicamundi/templates/package/snippets/objects/read-contact_info.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/read-contact_info.html
@@ -1,4 +1,16 @@
 <div class="{{ classes | join(' ') }}">
-    <dt>{{ title or _('Contact Info') }}</dt>
-    <dd><div class="label label-info">Todo</div></dd>
+    <h3>{{ title or _('Contact Info') }}</h3>
+    
+    {% if obj.address -%}
+    <dt>{{ _('Address') }}</dt>
+    <dd>
+       {{ obj.address.address }} {{ _('Zip') }}: {{ obj.address.postalcode }}
+    </dd>
+    {% endif -%}
+    
+    {% if obj.email -%}
+    <dt>{{ _('Email') }}</dt>
+    <dd><a href="mailto:{{ obj.mail}}">{{ obj.email }}</a></dd>
+    {% endif -%}
+
 </div>
