Implemented render() for object widgets not specifying template

--- a/ckanext/publicamundi/templates/package/snippets/objects/read-postal_address.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/read-postal_address.html
@@ -1,4 +1,10 @@
 <div class="{{ classes | join(' ') }}">
     <dt>{{ title or _('Postal Address') }}</dt>
-    <dd><span>{{ obj.address }}</span> - <span>{{ obj.postalcode }}</span></dd>
+    <dd>
+       {% if obj.address %}
+       <span>{{ obj.address }}</span>
+       {% if obj.postalcode %}<span>{{ _('Zip') }}: {{ obj.postalcode }}</span></dd>{% endif %}
+       {% else -%}
+       {{ _('n/a') }}
+       {% endif -%}
 </div>
