--- a/ckanext/publicamundi/templates/package/snippets/objects/edit.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/edit.html
@@ -4,6 +4,7 @@
     <h3>
         {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif %}{{ title -}}
     </h3>
-    {{ h.markup_for_field('edit', obj.get_field('email'), qname, { 'title': _('Email') }) }}
-    {{ h.markup_for_field('edit:compact', obj.get_field('address'), qname, { 'title': _('Postal Address') }) }}
+    {% for f in fields -%}
+    {{ f.markup }}
+    {% endfor -%}
 </div>
