--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-datetime.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-datetime.html
@@ -1,7 +1,7 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
 {% set placeholder = placeholder or field.default -%}
-{% set input_classes = [ 'input-medium' ] if input_classes is not defined -%}
+{% if input_classes is not defined %}{% set input_classes = [ 'input-medium' ] %}{% endif -%}
 {% set error = None -%}
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
