--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-textline-email.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-textline-email.html
@@ -1,7 +1,8 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
 {% set placeholder = placeholder or field.default -%}
-{% if input_classes is not defined %}{% set input_classes = [ 'input-small' ] %}{% endif -%}
+{% set input_classes = [ 'input-medium' ] if input_classes is not defined -%}
+{% do input_classes.append('email') -%}
 {% set error = None -%}
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
@@ -10,12 +11,10 @@
         {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif -%}
     </label>
     <div class="controls">
-        <input type="text" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
-            class={{ input_classes | list | join(" ") }}
+        <input type="email" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
+            class="{{ input_classes | list | join(" ") }}"
             value="{{ value | empty_and_escape }}" 
             placeholder="{{ placeholder | empty_and_escape }}"
-            data-module="datepicker"
-            data-module-format="yyyy-mm-dd"
             {{ markup_helpers.attributes(attrs) -}}
         />
         {% if error and error is iterable -%}
@@ -23,5 +22,3 @@
         {% endif -%}
     </div>
 </div>
-
-{% resource 'ckanext-publicamundi/datepicker' %}
