--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-text.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-text.html
@@ -5,8 +5,7 @@
 
 <div class="control-group{{ " " ~ classes | join(' ') }}">
     <label class="control-label" for="{{ 'input-' ~ qname }}">
-        {{ title }}
-        {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif %}
+        {{ title }}{{ markup_helpers.mark_required(required) }}
     </label>
     <div class="controls">
         <textarea id="{{ 'input-' ~ qname }}" name="{{ qname }}" 
