--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-time.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-time.html
@@ -9,8 +9,7 @@
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
     <label class="control-label" for="{{ 'input-' ~ qname }}">
-        {{ title }}
-        {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif -%}
+        {{ title }}{{ markup_helpers.mark_required(required) }}
     </label>
     <div class="controls">
         <div class="input-append datetime"
