--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-float-text.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-float-text.html
@@ -2,7 +2,7 @@
 
 {% set placeholder = placeholder or field.default -%}
 {% if input_classes is not defined %}{% set input_classes = [ 'input-small' ] %}{% endif -%}
-{% do input_classes.extend(['number', 'int']) %}
+{% do input_classes.extend(['number', 'float']) %}
 {% set error = None -%}
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
@@ -12,7 +12,7 @@
     <div class="controls">
         <input type="text" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
             class="{{ input_classes | list | join(" ") }}"
-            value="{{ value | int(default=field.default) }}"
+            value="{{ value | float(default=field.default) }}"
             data-min="{{ field.min }}" data-max="{{ field.max }}"
             placeholder="{{ placeholder | empty_and_escape }}"
             {{ markup_helpers.attributes(attrs) -}}
