--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-float.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-float.html
@@ -2,7 +2,7 @@
 
 {% set placeholder = placeholder or field.default -%}
 {% if input_classes is not defined %}{% set input_classes = [ 'input-small' ] %}{% endif -%}
-{% do input_classes.extend(['number', 'int']) %}
+{% do input_classes.extend(['number', 'float']) %}
 {% set error = None -%}
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
@@ -10,10 +10,10 @@
         {{ title }}{{ markup_helpers.mark_required(required) }}
     </label>
     <div class="controls">
-        <input type="text" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
+        <input type="number" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
             class="{{ input_classes | list | join(" ") }}"
-            value="{{ value | int(default=field.default) }}"
-            data-min="{{ field.min }}" data-max="{{ field.max }}"
+            value="{{ value | float(default=field.default) }}"
+            step="any" min="{{ field.min }}" max="{{ field.max }}"
             placeholder="{{ placeholder | empty_and_escape }}"
             {{ markup_helpers.attributes(attrs) -}}
         />
