--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-uri.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-uri.html
@@ -2,6 +2,7 @@
 
 {% set placeholder = placeholder or field.default -%}
 {% if input_classes is not defined %}{% set input_classes = [ 'input-medium' ] %}{% endif -%}
+{% do input_classes.extend(['url']) %}
 {% set error = None -%}
 
 <div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
@@ -9,7 +10,7 @@
         {{ title }}{{ markup_helpers.mark_required(required) }}
     </label>
     <div class="controls">
-        <input type="text" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
+        <input type="url" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
             class="{{ input_classes | list | join(" ") }}"
             value="{{ value | empty_and_escape }}" 
             placeholder="{{ placeholder | empty_and_escape }}"
