--- a/ckanext/publicamundi/templates/tests/form.html
+++ b/ckanext/publicamundi/templates/tests/form.html
@@ -10,8 +10,9 @@
 {% endblock %}
 
 {% block primary_content_inner %}
-<form class="{{ c.form_class }}">
+<form method="post" class="{{ c.form_class }}">
     {{ c.form }}
+    <input type="submit" name="submit" />
 </form>
 {% endblock %}
 
